--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,20 +1,91 @@
 @mixin default(
-    $background: var(--color-dark), 
+    $background: var(--color-accent), 
     $color: var(--color-light), 
-    $hover-background: var(--color-accent), 
+    $hover-background: var(--color-accent-300), 
     $hover-color: var(--color-light)
     ) {
     background-color: $background;
     color: $color;
-    padding: 1rem 2rem;
-    border: 0;
-    border-radius: 2rem;
-    font-size: 1rem;
-    font-weight: 700;
+    padding: 1rem 1.5rem;
+    transform: skew(-10deg);
+    border: 2px solid transparent;
+    font-size: var(--font-size-4);
+    font-weight: 400;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    &:hover {
+        background-color: transparent;
+        color: var(--color-light);
+        border: 2px solid var(--color-light);
+        transition: all 0.3s;
+    }
+}
+
+@mixin default-2(
+    $background: var(--color-accent-200), 
+    $color: var(--color-light), 
+    $hover-background: var(--color-accent-400), 
+    $hover-color: var(--color-light)
+    ) {
+    background-color: $background;
+    color: $color;
+    padding: 1rem 1.5rem;
+    transform: skew(-10deg);
+    border: 2px solid transparent;
+    font-size: var(--font-size-4);
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    &:hover {
+        background-color: transparent;
+        color: var(--color-light);
+        border: 2px solid var(--color-light);
+        transition: all 0.3s;
+    }
+}
+
+@mixin default-3(
+    $background: var(--color-accent), 
+    $color: var(--color-light), 
+    $hover-background: var(--color-accent-300),
+    $hover-color: var(--color-light)
+    ) {
+    background-color: $background;
+    color: $color;
+    padding: 0.5rem 1.5rem;
+    transform: skew(-10deg);
+    border: 2px solid transparent;
+    font-size: var(--font-size-3);
+    font-weight: 400;
     display: inline-block;
     text-decoration: none;
     &:hover {
-        background-color: $hover-background;
-        color: $hover-color;
+        background-color: transparent;
+        color: var(--color-dark);
+        border: 2px solid var(--color-dark);
+        transition: all 0.3s;
+    }
+}
+
+@mixin default-4(
+    $background: var(--color-accent), 
+    $color: var(--color-light), 
+    ) {
+    background-color: $background;
+    color: $color;
+    padding: 1rem 2rem;
+    transform: skew(-10deg);
+    border: 2px solid transparent;
+    font-size: var(--font-size-4);
+    font-weight: 400;
+    display: inline-block;
+    text-decoration: none;
+    &:hover {
+        background-color: transparent;
+        color: var(--color-dark);
+        border: 2px solid var(--color-dark);
+        transition: all 0.3s;
     }
 }
