--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -2,3 +2,8 @@
 @forward 'header';
 @forward 'menu';
 @forward 'footer';
+@forward 'about';
+@forward 'news';
+@forward 'strip';
+@forward 'opening';
+@forward 'map';
